# modern-llm

./: # Complete LLM Training Guide: Theory +   .gitignore  README.md  ddp_utils.py  eval_all.py  eval_checkpoint.py  eval_ema_vs_raw.py  eval_v1_full.py  eval_v3_sft.py  final_steps_guide_original.md  generate_samples.py  next_offline.md  offline.md  offline_trainer.md  pyproject.toml  qual_eval.py  requirements.txt  sft.py  sft_test.py  sft_three_way.py  sft_v3.py  smoke_test_v1.py  smoke_test_v2.py  test_harness.py  test_sft.py  train.py  train_v3.py  v2_and_sft_guide.md  v2_and_sft_guide_v2.md  v3_generate_script.py  v3_sft_test.py
notebooks/: 01_tokenizer_exploration.ipynb  02_training_analysis.ipynb  03_results_visualization.ipynb
src/data/: dataset.py  make_manifest.py  manifest_dataset.py  prepare_data.py  prepare_data_old.py  sft_dataset.py
src/eval/: harness_adapter.py
src/grpo/: baseline.py  curriculum.py  grpo_train.py  reward.py  synthetic_math.py
src/model/: __init__.py  attention.py  block.py  gpt.py  mhc.py  rmsnorm.py  rope.py  swiglu.py
src/optim/: muon.py
src/tokenizer/: bpe.py
